@@ -2,6 +2,7 @@
 
 	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
 	* src/lib/gnome_sudoku.py Remember window size when quitting (Bug #380780)
+	* src/lib/game_selector.py Sort game name columns numerically (Bug #417191)
 
 2007-03-25  Robert Ancell <robert.ancell@gmail.com>
 
